# playbook-tools

./: .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
.github/workflows/: deploy.yml
apps/web/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/src/: AgentFlowAnimation.tsx  App.tsx  Landing.tsx  PlaybookChat.tsx  RagDemo.tsx  index.css
docs/: implementation-report.html  session-report-2026-03-26.html
scripts/: deploy-prod.sh
services/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 20250304_0001_initial_schema.py  20250311_0002_add_users_and_sessions.py
services/api/app/: db.py  main.py
services/api/app/agent/: graph.py  playbook_loader.py  playbooks.py  router.py
services/api/app/agent/playbooks/: finance.yaml  game-design.yaml  general.yaml
services/api/app/agent/tools/: pdf_parse.py  rag_retrieve.py  web_search.py
services/api/app/core/: auth.py  config.py  deps.py
services/api/app/models/: __init__.py  base.py  chat.py  document.py  user.py
services/api/app/routes/: agent.py  auth.py  chat.py  documents.py  query.py  schemas.py
services/api/app/services/: memory.py
services/api/app/tools/: chunking.py  embeddings.py  llm.py  memory_store.py  pdf.py  query_decompose.py  vectorstore.py
