[project]
name = "playbook-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.7",
  "pydantic-settings>=2.1",
  "uvicorn[standard]>=0.27",
  "chromadb>=0.5",
  "pypdf>=4.0",
  "openai>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"