[project]
name = "playbook-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.1",
  "uvicorn[standard]>=0.27",
  "pypdf>=4.0",
  # --- PDF processing (OCR + tables) ---
  # pdfplumber: extracts text AND tables from digital PDFs with layout awareness.
  # Wraps pdfminer.six — better table detection than pypdf.
  "pdfplumber>=0.10",
  # boto3: AWS SDK. Used for Textract OCR on scanned PDFs.
  # On EC2, auth is automatic via IAM instance role — no API keys needed.
  "boto3>=1.34",
  # --- Vector search ---
  # faiss-cpu is Facebook's similarity search library. Runs in-process (no server).
  # Use faiss-gpu if you have a CUDA-capable GPU and need to search millions of vectors.
  "faiss-cpu>=1.7",
  # numpy is required by FAISS for vector array operations.
  "numpy>=1.24",
  "openai>=1.0",
  "python-multipart>=0.0.9",
  # --- Database ---
  # sqlalchemy[asyncio] adds async engine + session support on top of the ORM.
  "sqlalchemy[asyncio]>=2.0",
  # asyncpg is the async PostgreSQL driver — used by SQLAlchemy via the +asyncpg URL prefix.
  # You never call asyncpg directly; SQLAlchemy handles it.
  "asyncpg>=0.29",
  # alembic manages schema migrations — think git for your database structure.
  "alembic>=1.13",
  # --- Agent (LangChain + LangGraph) ---
  # langchain: core abstractions (tools, messages, chat models)
  # langchain-openai: ChatOpenAI model wrapper
  # langchain-community: third-party integrations (Brave Search, DuckDuckGo fallback)
  # langgraph: graph-based agent runtime — provides create_react_agent
  # tavily: AI-optimized search API — returns clean text, not raw HTML (set TAVILY_API_KEY in .env)
  # duckduckgo-search: free fallback when no Tavily key is configured
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-community>=0.2.0",
  "langgraph>=0.1.0",
  "tavily-python>=0.3.0",
  "ddgs>=9.0.0",
  # pyyaml: load playbook definitions from .yaml files so new playbooks
  # can be added by dropping a file — no code change or redeploy needed.
  "pyyaml>=6.0",
  # --- Auth ---
  # bcrypt: password hashing. Deliberately slow to resist brute-force attacks.
  # Using the bcrypt package directly — passlib has compatibility issues with bcrypt>=4.0.
  "bcrypt>=4.0",
  # python-jose: JWT encode/decode. JWTs are self-contained, stateless tokens —
  # the server can verify identity without a DB lookup on every request.
  "python-jose[cryptography]>=3.3.0",
]

[tool.setuptools.packages.find]
# Alembic lives alongside app/ but isn't a distributable Python package —
# it's a migration tool directory. Without this exclude, setuptools auto-discovers
# both app/ and alembic/ and refuses to build (flat-layout ambiguity error).
exclude = ["alembic*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"